# csc2003-a1

./: .gitignore  CMakeLists.txt  README.md  marking_rubrics.md
Codes/: CMakeLists.txt
Codes/communications/bluetoot/: CMakeLists.txt  README.md  bluetoot.c
Codes/communications/esp-uart/: CMakeLists.txt  README.md  comm_mod.c  comm_mod.h
Codes/communications/m5-UART/: README.md
Codes/communications/m5-UART/m5-code/: README.md  main.py
Codes/communications/m5-UART/pico-code/: CMakeLists.txt  README.md  main.c
Codes/communications/mqtt-certs/: README.md  mqtt_publish.py  mqtt_subscribe.py
Codes/communications/website/: .gitignore  README.md  main.py  requirements.txt
Codes/communications/website/mqtt/: README.md
Codes/communications/website/mqtt/m5stack-mqtt/: mqtt.py  uart.py
Codes/communications/website/mqtt/python-mqtt/: config.py  hivemq-trust-store.jks  hivemq.jks  mqtt-client-cert.crt  mqtt-client-cert.pem  mqtt-client-key.pem  mqtt_publish.py  mqtt_subscribe.py  server.pem
Codes/communications/website/pico/: uart.c
Codes/communications/website/static/: stylesheet.css
Codes/communications/website/templates/: index.html  layout.html
Codes/infrared/: CMakeLists.txt
Codes/infrared/barcode/: CMakeLists.txt  barcode.c  barcode.h
Codes/mapping_navigation/: README.md  mapandnav.c  test16.c
Codes/merge/: CMakeLists.txt  car.c
Codes/motor_control/: CMakeLists.txt  zoomies.c  zoomies.h
Codes/motor_control/Individual/: CMakeLists.txt  motorModule.c  motorModule.h
Codes/ultrasonic_accelerometer/: CMakeLists.txt
Codes/ultrasonic_accelerometer/accelerometer/: CMakeLists.txt  accel_ver2.c  accelerometer.c  accelerometer.h  test.txt
Codes/ultrasonic_accelerometer/ultrasonic/: CMakeLists.txt  cmExample.c  test.txt  ultrasonic.c  ultrasonic.h
Documentation/communications/: README.md
Documentation/mapping_navigation/: README.md
Documentation/ultrasonic_accelerometer/: README.md
